--- a/package.json
+++ b/package.json
@@ -15,15 +15,20 @@
     "i18next": "^21.6.10",
     "i18next-browser-languagedetector": "^6.1.3",
     "i18next-http-backend": "^1.3.2",
+    "next": "^12.0.10",
+    "query-string": "^7.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-i18next": "^11.15.3",
     "react-redux": "^7.2.6",
-    "react-router-dom": "^6.2.1",
+    "react-router-dom": "^5.3.0",
+    "react-saga": "^0.3.1",
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
+    "redux-saga": "^1.1.3",
     "redux-thunk": "^2.4.1",
     "typescript": "^4.5.5",
+    "use-query-params": "^1.2.3",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
